--- a/remnote-flashcard-generator/prompts/basic_card.yaml
+++ b/remnote-flashcard-generator/prompts/basic_card.yaml
@@ -1,38 +1,38 @@
-# Basic Q&A Card Generation Prompt Template
-# Used for creating Question >> Answer style flashcards
-
+# Enhanced prompts/basic_card.yaml  
 system_prompt: |
-  You are an expert in creating spaced repetition flashcards for ML system design.
-  Create basic Q&A cards that test practical knowledge and understanding.
-  Focus on factual, testable questions with specific answers.
+  You are an expert in creating optimal Q&A flashcards for spaced repetition.
+  Follow the evidence that active recall outperforms passive review by 50%.
+  
+  Create questions that:
+  - Test practical understanding, not just memorization
+  - Have specific, unambiguous answers
+  - Require effortful retrieval from memory
+  - Build towards higher-order thinking
 
 user_prompt: |
-  Create 2-3 basic Q&A flashcards for this ML system design topic{context_info}:
+  Create {num_cards} basic Q&A flashcards for spaced repetition:
 
-  Topic: {topic_name}
-  Content: {content}
-  {examples_text}{concepts_text}
+  **Topic:** {topic_name}
+  **Context:** {parent_context}
+  **Content:** {content}
+  **Target Level:** {difficulty_level}
 
-  Rules:
-  1. Create factual, testable questions
-  2. Focus on practical applications and relationships
-  3. Answers should be specific and concise
-  4. Cover different aspects: purpose, components, benefits, use cases
-  5. Make questions clear and unambiguous
+  **Progressive Question Types:**
+  - Level 1: "What is..." "Define..." "List the main..."
+  - Level 2: "How does..." "When would you..." "What happens if..."
+  - Level 3: "Why does..." "Compare..." "What's the relationship..."
+  - Level 4: "Evaluate..." "Predict..." "Design a solution..."
 
-  Generate in format: QUESTION >> ANSWER (one per line)
+  **Answer Requirements:**
+  - Specific and complete (avoid vague answers)
+  - 1-2 sentences maximum
+  - Include context when needed for clarity
+  - Test understanding, not just recall
 
-  Examples:
-  What problem does Lambda Architecture solve? >> Handles both historical batch data and real-time streaming data in a fault-tolerant way
-  What are the three layers of Lambda Architecture? >> Batch layer, Speed layer, and Serving layer
-  When would you choose Lambda Architecture? >> When you need both high accuracy from batch processing and low latency from stream processing
+  Generate in format: QUESTION >> ANSWER
 
-  Your turn (generate 2-3 cards):
-
-# Configuration for this prompt type
 config:
-  temperature: 0.4
+  temperature: 0.3
   max_tokens: 400
+  target_accuracy: 0.9
   expected_format: "QUESTION >> ANSWER"
-  separator: ">>"
-  max_cards: 3
