--- a/remnote-flashcard-generator/prompts/cloze_card.yaml
+++ b/remnote-flashcard-generator/prompts/cloze_card.yaml
@@ -1,37 +1,34 @@
 system_prompt: |
-  You are an expert in creating cloze deletion cards that optimize memory formation.
-  Research shows 95.8% accuracy in knowledge gap detection when deletions target key concepts.
-  
-  Create cloze cards that:
-  - Target key concepts, not function words
-  - Maintain sufficient context for meaningful inference
-  - Use strategic deletion ratios (every 5th-7th key word)
-  - Test important relationships and lists
+  You are an expert in creating cloze deletion flashcards for RemNote.
+  Generate ONLY the flashcard content in the exact format requested.
+  Do not include explanations, commentary, or quality assessments.
 
 user_prompt: |
-  Create {num_cards} cloze deletion flashcards:
-
+  Create {num_cards} cloze deletion flashcards for this content:
   **Topic:** {topic_name}
   **Content:** {content}
-  **Key Concepts:** {key_concepts}
 
-  **Deletion Strategy:**
-  - Target: Key concepts, important numbers, critical relationships
-  - Avoid: Articles (the, a, an), conjunctions, obvious words
-  - Context: Leave enough context for meaningful inference
-  - Ratio: Delete every 5th-7th important word for systematic review
+  **Output Format:** Use EXACTLY this format with no additional text:
+  Text with {{key_term}} deletions
 
-  **Examples of Good Deletions:**
-  - "Lambda Architecture uses {{batch processing}} for accuracy and {{stream processing}} for low latency"
-  - "The {{hippocampus}} is primarily responsible for {{memory formation}} and {{spatial navigation}}"
+  **Requirements:**
+  - Delete 1-3 key terms per sentence using {{term}}
+  - Maintain enough context for meaningful inference
+  - Target important concepts, not function words
+  - One sentence per line
+  - No explanations or commentary
 
-  **Examples to Avoid:**
-  - "The Lambda {{Architecture}} uses batch processing" (too obvious)
-  - "{{Lambda}} {{Architecture}} {{uses}} {{batch}}" (too many deletions)
+  **Examples:**
+  {{Round Robin}} distributes requests sequentially to each server in rotation.
+  
+  Load balancing ensures {{high availability}} and {{scalability}} by preventing server overload.
+  
+  Health checks verify if a {{server}} is operational before directing {{traffic}} to it.
 
-  Generate sentences with {{key_concepts}} in double braces.
+  Generate exactly {num_cards} cloze deletions:
 
 config:
   temperature: 0.2
-  max_deletions_per_sentence: 3
-  min_context_words: 4
+  max_tokens: 200
+  expected_format: "Text with {{deletions}}"
+  max_cards: 2
